--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "axios": "^1.7.4",
     "marked": "^14.0.0",
     "nuxt": "^3.12.4",
     "vue": "latest"
@@ -17,6 +18,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
+    "sass": "^1.77.8",
+    "sass-embedded": "^1.77.8",
     "tailwindcss": "^3.4.10"
   }
 }
