--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/eslint": "^0.5.0",
     "axios": "^1.7.4",
     "marked": "^14.0.0",
     "nuxt": "^3.12.4",
